--- a/main.css
+++ b/main.css
@@ -1,3 +1,24 @@
+body{
+    font-family: "Roboto", sans-serif;
+}
+
 .navbar{
     background-color: #e15f41;
+}
+
+.nav .nav-link.active{
+    background-color: white;
+    color: #e15f41;
+}
+
+.nav .nav-link,
+.navbar-brand,
+.navbar-brand:hover{
+    color: white;
+}
+
+.navbar-brand{
+    font-family: "Pacifico", cursive;
+    font-weight: 400;
+    font-style: normal;
 }
