--- a/main.css
+++ b/main.css
@@ -17,12 +17,20 @@ body{
     color: white;
 }
 
-.navbar-brand{
+.navbar-toggler{
+    background-color: #ffeae6;
+}
+
+.section-title{
     font-family: "Pacifico", cursive;
     font-weight: 400;
     font-style: normal;
 }
 
-.navbar-toggler{
+.section-title span{
+    color: #e15f41;
+} 
+
+#sobre-o-restaurante{
     background-color: #ffeae6;
 }
