Feat: Adicionando seção Para todas as Ocasiões, de eventos.

--- a/main.css
+++ b/main.css
@@ -27,10 +27,16 @@ body{
     font-style: normal;
 }
 
-.section-title span{
-    color: #e15f41;
-} 
-
 #sobre-o-restaurante{
     background-color: #ffeae6;
+}
+
+.carousel-item img {
+    width: 100%;
+    height: 300px; /* ou qualquer altura que se adeque melhor ao visual */
+    object-fit: cover;
+}
+
+.text-colored{
+    color: #e15f41;
 }
