--- a/main.css
+++ b/main.css
@@ -6,14 +6,15 @@ body{
     background-color: #e15f41;
 }
 
-.nav .nav-link.active{
+#cabecalho .nav .nav-link.active{
     background-color: white;
     color: #e15f41;
 }
 
-.nav .nav-link,
+#cabecalho .nav .nav-link,
 .navbar-brand,
-.navbar-brand:hover{
+.navbar-brand:hover,
+.nav-cardapio .nav-link.active:hover{
     color: white;
 }
 
@@ -39,4 +40,14 @@ body{
 
 .text-colored{
     color: #e15f41;
+}
+
+.nav-cardapio .nav-link.active{
+    background-color: #e15f41;
+    color: #fff;
+}
+
+.nav-cardapio .nav-link:hover{
+    color: #e15f41;
+    font-weight: bold;
 }
