Chore: (14.8) Adicionando a seção de fale conosco com bootstrap. HTML e CSS.

--- a/main.css
+++ b/main.css
@@ -43,7 +43,8 @@ body{
     color: #e15f41;
 }
 
-.nav-cardapio .nav-link.active{
+.nav-cardapio .nav-link.active,
+#fale-conosco button{
     background-color: #e15f41;
     color: #fff;
 }
@@ -51,4 +52,13 @@ body{
 .nav-cardapio .nav-link:hover{
     color: #e15f41;
     font-weight: bold;
+}
+
+.social-links li{
+    list-style: none;
+    display: inline;
+}
+
+.social-links a{
+    text-decoration: none;
 }
