--- a/main.css
+++ b/main.css
@@ -62,3 +62,10 @@ body{
 .social-links a{
     text-decoration: none;
 }
+
+@media (max-width: 767px){
+    .carousel-item img{
+        height: 280px;
+    }
+
+}
